# dxlog

./: .gitignore  Cargo.toml  LICENSE  README.md  dxlog.toml
crates/dxlog/: Cargo.toml
crates/dxlog-cli/: Cargo.toml
crates/dxlog-cli/src/: cli.rs  main.rs
crates/dxlog-cli/src/commands/: hypothesis.rs  knowledge.rs  literature.rs  mod.rs  references.rs
crates/dxlog-tools/: Cargo.toml
crates/dxlog-tools/src/: arxiv_scraper.rs  github_scraper.rs  lib.rs
crates/dxlog/src/: config.rs  hypothesis.rs  init.rs  knowledge.rs  lib.rs  literature.rs  log_manager.rs  md_frontmatter.rs  reference.rs  research_log.rs  utils.rs
crates/dxlog/src/templates/: hypothesis.default.jinja  knowledge.default.jinja  literature.default.jinja
