[package]
name = "dxlog"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
git2.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true
minijinja.workspace = true
clap.workspace = true
dxlog-tools = { version = "0.1.0", path = "../dxlog-tools" }
